Make sure that the color profile of File Layers is handled properly

When importing a mergedimage.png for a File Layer we should
make sure that the color profile is loaded correctly. To do that
we shoudl avoid using a QImage and prefer the native loading
with KisDocument.

The problem is that KisDocument cannot directly load from a
QIODevice, hence we should first extract the merged image
into a temporary file and only then load it.

BUG:467608


(cherry picked from commit f77c162afd5eb4153bb1b35548dfaf679179a15c)

Co-authored-by: Dmitry Kazakov <dimula73@gmail.com>